samples/_failures_safe/1761295833_bec49a_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_a34b1961.c: In function ‘parser_init’:
./samples/SAFE/__tmp_a34b1961.c:151:22: error: expected ‘;’ at end of input
  151 |     parser->has_error
      |                      ^
      |                      ;
./samples/SAFE/__tmp_a34b1961.c:151:5: error: expected declaration or statement at end of input
  151 |     parser->has_error
      |     ^~~~~~
